# NPUsim

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  gpt-oss-part-2.patch  lint.sh  pyproject.toml
.github/workflows/: lint.yml  regression_test.yml  test.yml
MP4 Part 3.2 Latency/operator_logs/: deepseekv2-236b_mb16_tp16_pp1.csv  deepseekv2-236b_mb16_tp16_pp1_decode.csv  deepseekv2-236b_mb16_tp16_pp1_prefill.csv  deepseekv2-236b_mb16_tp1_pp16.csv  deepseekv2-236b_mb16_tp1_pp16_decode.csv  deepseekv2-236b_mb16_tp1_pp16_prefill.csv  deepseekv2-236b_mb16_tp2_pp8.csv  deepseekv2-236b_mb16_tp2_pp8_decode.csv  deepseekv2-236b_mb16_tp2_pp8_prefill.csv  deepseekv2-236b_mb16_tp4_pp4.csv  deepseekv2-236b_mb16_tp4_pp4_decode.csv  deepseekv2-236b_mb16_tp4_pp4_prefill.csv  deepseekv2-236b_mb16_tp8_pp2.csv  deepseekv2-236b_mb16_tp8_pp2_decode.csv  deepseekv2-236b_mb16_tp8_pp2_prefill.csv  deepseekv2-236b_mb1_tp16_pp1.csv  deepseekv2-236b_mb1_tp16_pp1_decode.csv  deepseekv2-236b_mb1_tp16_pp1_prefill.csv  deepseekv2-236b_mb1_tp1_pp16.csv  deepseekv2-236b_mb1_tp1_pp16_decode.csv  deepseekv2-236b_mb1_tp1_pp16_prefill.csv  deepseekv2-236b_mb1_tp2_pp8.csv  deepseekv2-236b_mb1_tp2_pp8_decode.csv  deepseekv2-236b_mb1_tp2_pp8_prefill.csv  deepseekv2-236b_mb1_tp4_pp4.csv  deepseekv2-236b_mb1_tp4_pp4_decode.csv  deepseekv2-236b_mb1_tp4_pp4_prefill.csv  deepseekv2-236b_mb1_tp8_pp2.csv  deepseekv2-236b_mb1_tp8_pp2_decode.csv  deepseekv2-236b_mb1_tp8_pp2_prefill.csv  (+149 more)
mp4_part4_artifact/: README.md  part4_changes.patch
mp4_part4_artifact_clean/: part4_changes.patch
neusim/: conftest.py
(+158 files in other folders)
