[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neusim"
authors = [{name = "Yuqi Xue", email = "yuqixue2@illinois.edu"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

dependencies = [
    "absl-py==2.1.0",
    "numpy==1.26.4",
    "pydantic==2.10.6",
    "matplotlib==3.9.2",
    "parallelbar==2.5",
    "ray[default]==2.46.0",
    "scipy==1.15.3",
    "tqdm==4.66.5",
    "pandas==2.1.4",
    "pyarrow==20.0.0",
    "joblib==1.5.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.1.13",
    "mypy==1.8.0"
]

[tool.ruff]
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
norecursedirs = ["results", "dist", "build", ".git", "*.egg-info"]
testpaths = ["neusim"]
addopts = "--cov=neusim"
